--- a/index.html
+++ b/index.html
@@ -11,9 +11,19 @@
     <h1 class="jumbotron text-center"> World's Creepiest Chatbot</h1>
 <div class="container">
     <div class="row">
-        
+        <div class="col-sm-6 offset-sm-3">
+            <div id="chatbox" class="border border-success">
+                <p class="botText"><span>Hello, I'm Mr. Roboto!</span></p>
+            </div>
+            <div id="userInput">
+                <input id="textInput" class="form-control" type="text" name="msg" placeholder="Type your message here: ">
+                <input id="buttonInput" class="btn btn-success form-control" type="Submit" value="Send">
+            </div>
+        </div>
     </div>
+    <script>
+        
+    </script>    
 </div>
 </body>
-
 </html>
